added pchat to ChatGuiClient/terminal_commands